maze.lessons.maze.island.IslandMaze.scala.error
Escaper:50: error: not found: value Wall
		while(!estFaceMur&&Wall){
                                   ^Escaper:53: error: not found: value Wall
		if (estFaceMur&&(!Wall)){
                                  ^Escaper:57: error: not found: value Wall
		else if(estFaceMur&&Wall){
                                    ^