maze.lessons.maze.island.IslandMaze.scala.code
override def run() {
	while (getY!=0){
		if(!estFaceMur){
			avance
		}
		else if(WallG){
			gauche
			avance
			droite
		}
		else if(WallD){
			droite
			avance
			droite
		}
	}
	suivre
	prendBiscuit
}

def WallG():Boolean={
	gauche
	if(estFaceMur){
		droite 
		return true
	}
	else{
		droite
		return false
	}
	return false
}

def WallD():Boolean={
	droite
	if(estFaceMur){
		gauche
		return true
	}
	else{
		gauche
		return false
	}
	return false
}

def suivre(){
	while(!estSurBiscuit){
		while(!estFaceMur&&Wall){
			avance
		}
		if (estFaceMur&&(!Wall)){
		gauche
		avance
		}
		else if(estFaceMur&&Wall){
			if(!estSurBiscuit){
					droite	
			}

		}
		else{
			gauche
			avance
		}
	}
}
